# Achtli

./: .gitignore  404.html  AGENTS.md  Gemfile  README.md  game.html  game.js  game_logic.js  index.PY  index.html  mkdocs.yml  package-lock.json  package.json  style.css
__tests__/: game.test.js  game_logic.test.js
decisiones/: 20250630-actualizar-sha.md  20250630-automatizar-sha-en-actions.md  20250630-configurar-gh-actions.md  20250630-crear-agents.md  20250630-evitar-doble-flujo.md  20250630-fix-html-tags.md  20250630-js-mirror-guide.md  20250630-overlay-detalle-plantas.md  20250630-permisos-escritura-actions.md  20250630-pruebas-js-wasm.md  20250630-remover-automatizacion-sha.md  20250630-script-sha.md  20250630-sustituir-shas-pendientes.md  20250701-material-details.md  20250701-modular-js.md  20250701-prototipo-wasm.md  20250702-fix-counter.md  20250703-js-fallback.md  20250704-controles-canvas.md  20250705-rust-action.md  20250706-fix-gemfile.md  20250707-pink-canvas-main.md  20250708-canvas-pantalla-completa.md  20250709-cuadro-controlable.md  20250710-controles-tactiles.md  20250711-ordenar-sha-y-remover-jekyll.md  20250712-fix-touch-fallback.md  20250712-fix-touch-style.md  20250713-integrar-game-wasm.md  20250714-version-canvas.md  20250715-plantas-tactiles.md  20250716-mejorar-readme-instrucciones.md  20250716-paridad-js-rust.md  20250716-test-frameworks.md  20250717-cosecha-madura.md  20250717-crecer-plantas.md  20250717-plant-growth.md  20250717-readme-tests.md  (+9 more)
docs/: decisiones.md  (+2 more)
wasm_game/: Cargo.toml
wasm_game/src/: growth.rs  lib.rs  plant.rs
(+8 files in other folders)
