[package]
name = "wasm_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
